--- a/styleMercedes.css
+++ b/styleMercedes.css
@@ -9,10 +9,21 @@
     display: inline-block;
     text-align: center;
 }
+
+.containerVideo{
+    background-color: black;
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
  
 .container3 {
     margin-top: 20px;
     margin-left: 10px;
+    margin-bottom: 20px;
     background-color: white;
     justify-content: flex-start;
     flex-direction: column;
@@ -25,6 +36,8 @@
     flex-direction: column;
 
   }
+
+
   .container33 {
     background-color: black;
 
