--- a/lamboStyles.css
+++ b/lamboStyles.css
@@ -1,3 +1,11 @@
+.navbar {
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-brand a {
+    height: 2rem;
+}
+
 .container{
         background-color: black;
         display: flex;
